@@ -1,5 +1,6 @@
 0.x.y (dd-MMM-yy):
  - fix: chanelog date detection for long date form
+ - fix: do not emit "Created By" line for new ports
 
 0.1.7 (18-Dec-17):
  - feature: add ability to create ports
